<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkMode"
    tools:context=".TestActivity">

    <LinearLayout
        android:id="@+id/buttonField"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_goback"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:backgroundTint="#673AB7"
            android:text="@string/go_back"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="30dp"
        />
    </LinearLayout>

    <!-- Main section -->
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/buttonField"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/title"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/test_case_generator"
        />

        <TextView
            android:id="@+id/description"
            android:layout_width="395dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:text="@string/discrip"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_size"
            android:textSize="16sp"
            android:padding="8dp"
            android:background="@android:drawable/edit_text"
            android:inputType="number"
        />

        <LinearLayout
            android:id="@+id/field_start"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_start"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:backgroundTint="#248ad4"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textSize="30dp"
                app:cornerRadius="30dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/redSeparator"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:background="@drawable/redseparator"/>

        <!-- Result Text Field -->
<!--        <TextView-->
<!--            android:id="@+id/text_result"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="@color/white"-->
<!--            android:scrollbars="vertical"-->
<!--            android:maxLines="500"-->
<!--            android:textSize="16sp"-->
<!--        />-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <TextView
                android:id="@+id/text_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:scrollbars="vertical"/>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>